# first-rpi-test

./: .gitignore  Cargo.toml  default.nix  flake.nix  index.html  push_script.sh  statemachine.drawio  style.css
.zed/: tasks.json
assets/: index.html  index2.html  script.js  style.css
cad/: (_82 GT2 20T b5.STEP  40Tooth GT2 Pulley.stp  GT2 Pulley Misumi Shape B 60T.STEP  GT2_40teeth_10bore.STEP  Stepper motor SUPER POWER.STEP  door.20260406-142915.FCBak  door.FCStd  door_sliding_plate.FCStd  dooradapter-V1_2.stl  dooradapter.20260406-141105.FCBak  dooradapter.FCStd  double_idle_pulley-double_idle_pulley.stl  double_idle_pulley.FCStd  drive.FCStd
src/: distance.rs  door_statemachine.rs  i2c.rs  keypad.rs  led_stripe.rs  main.rs  pins.rs  rgb_swappper.rs  rgbled.rs  servo.rs  state.rs  statemachine.rs  stepper.rs
src/door/: detector.rs  door.rs  mod.rs  motor.rs  routes.rs  statemachine.rs  stepper.rs
src/led/: frame.rs  led.rs  mod.rs  sequence.rs  sequence_generator.rs  stripe.rs
src/tasks/: updater.rs
src/unordered/: pins.rs  rgbled.rs  servo.rs
src/ws/: handler.rs  messages.rs  mod.rs  static_files.rs
