[package]
name = "first-rpi-test"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
futures = "0.3.31"
humanize-duration = "0.0.7"
include_dir = "0.7.4"
mime_guess = "2.0.5"
rand = "0.9.2"
rppal = "0.22.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
simple-signal = "1.1.1"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs"] }
ws2818-rgb-led-spi-driver = "2.0.0"
